samples/_failures_safe/1761258666_5aa3eb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_37dda576.c: In function ‘main’:
./samples/SAFE/__tmp_37dda576.c:150:5: error: expected expression at end of input
  150 |     GraphOperation operations[] =
      |     ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_37dda576.c:150:5: error: expected declaration or statement at end of input
